data/diff_tests/wasmtime/call_InvalidorInconsistentControlFlowGraph_3549.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\85\80\80\80\00\04\00\00\00\00\08\81\80"
    "\80\80\00\03\0a\a5\80\80\80\00\04\84\80\80\80\00"
    "\00\10\01\0b\84\80\80\80\00\00\10\02\0b\84\80\80"
    "\80\00\00\10\00\0b\84\80\80\80\00\00\10\00\0b"
  )
""
)